--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@fortawesome/vue-fontawesome": "^0.1.5",
     "core-js": "^3.6.4",
+    "pdfvuer": "^1.4.0",
     "vue": "^2.6.11",
+    "vue-pdf": "^4.0.8",
     "vue-router": "^3.1.5",
     "vuetify": "^2.2.11",
     "vuex": "^3.1.2"
